user and interface panels

--- a/src/app/paper/paper.component.html
+++ b/src/app/paper/paper.component.html
@@ -8,6 +8,6 @@
 
     (touchstart)="mouseClicked(true)"
     (touchend)="mouseClicked(false)"
-    width="1080"
-    height="1500"
+    width="{{width}}"
+    height="{{height}}"
 ></canvas>
