--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
-@import "~primeicons/primeicons.css";
-@import "~primeng/resources/themes/nova/theme.css";
-@import "~primeng/resources/primeng.min.css";
+@import '~primeicons/primeicons.css';
+@import '~primeng/resources/themes/nova/theme.css';
+@import '~primeng/resources/primeng.min.css';
 
-html, body {
-  margin: 0;
-  height: 100%;
+html,
+body {
+    margin: 0;
+    height: 100%;
 }
