--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,35 @@
 <!--WELCOME-->
 <!--<p-megaMenu [model]="menuItems"></p-megaMenu>-->
 <!--<button pButton [label]="'START'"></button>-->
-<div
-    #paperComponentWrapper
-    style="
-        display: flex;
-        justify-content: center;
-        align-items: baseline;
-        /*height: 50%;*/
-        width: 1080px;
-        height: 1920px;
-    "
->
-    <app-paper
-        #paperComponent
-        [size]="size"
-        style="width: 1080px; height: 1500px"
-    ></app-paper>
-</div>
+
+<router-outlet></router-outlet>
+
+<!--<div-->
+<!--    #paperComponentWrapper-->
+<!--    style="-->
+<!--        display: flex;-->
+<!--        flex-direction: column;-->
+<!--        justify-content: space-between;-->
+<!--        align-items: baseline;-->
+<!--        /*height: 50%;*/-->
+<!--        width: 1080px;-->
+<!--        height: 1920px;-->
+<!--    "-->
+<!--&gt;-->
+<!--    <app-paper-->
+<!--        #paperComponent-->
+<!--        [size]="size"-->
+<!--        style="width: 1080px; height: 1500px"-->
+<!--    ></app-paper>-->
+<!--    <div class="buttons-wrapper">-->
+<!--        <p-progressBar [value]="1"></p-progressBar>-->
+
+<!--        <button-->
+<!--            style="'width: 100px; height: 50px'"-->
+<!--            pButton-->
+<!--            (click)="contribute()"-->
+<!--            [label]="'CONTRIBUTE'"-->
+<!--        ></button>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<p-progressBar [value]="1"></p-progressBar>-->
