--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,13 @@
 app-root {
     display: block;
     height: 100%;
+
+    .buttons-wrapper {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
