--- a/src/app/paper/paper.component.scss
+++ b/src/app/paper/paper.component.scss
@@ -1,7 +1,8 @@
 canvas {
   //width: 100%;
   //height: 100%;
-  border: 1px solid black;
+  //border: 1px solid black;
   margin: 0;
   background-color: lightgray;
+  box-shadow: 0 0 40px 40px lightgrey;
 }
